@@ -573,6 +573,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 20880) Fixed updater failure on SQLite backend
 * (bug 21182) Fixed invalid HTML in Special:Listgrouprights
 * (bug 20242) Installer no longer promts for user credentials for SQLite databases
+* (bug 20911) Installer failed to create a SQLite database
 
 == API changes in 1.16 ==
 
